--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "busboy": "^0.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "firebase": "^8.1.1",
-    "firebase-admin": "^9.4.1"
+    "firebase-admin": "^9.4.1",
+    "socket.io": "^3.1.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
